# gtest-gmock-with-c

./: README.md
src/: build.sh  main.cpp  module_a.c  module_a.h  module_b.c  module_b.h
test/: CMakeLists.txt  libmoduleb_fake.h  libmoduleb_mock.h  test.cpp
